app/assets/stylesheets/map_menu.css
.map-config {
  z-index: 2;
  position: fixed;
  color: #e2e0e0;
  background-color: rgba(0, 0, 0, 0.5);
  bottom: 0;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  font-size: .8em;
  transition: transform 250ms ease-in-out;
  border: solid 1px rgba(0, 0, 0, 0.5);
  border-bottom: none;
}

.map-config-header {
  background-color: rgba(9, 9, 9, 0.8);
  padding: .5em 1em .5em 1em;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  cursor: pointer;
}

.map-config-header p {
  font-family: 'Raleway', sans-serif;
  margin: 0;
}

.map-config-header p::before {
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  margin-right: .5em;
}

.map-config-header p::after {
  content: "\f077";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  position: absolute;
  right: 1em;
  transition: transform 250ms 250ms ease-in-out;
}

.map-config.active .map-config-header p::after {
  transform: rotate(180deg);
}

.legend {
  width: 12em;
  transform: translateY(120px);
}

.legend.active {
  transform: translateY(0);
}

.legend-header p::before {
  content: "\f03a";
}

.legend-body {
  display: flex;
  flex-direction: column;
  padding: .5em 1em .5em 1em;
  height: 120px;
}

.legend-item {
  display: flex;
  flex-direction: row;
  margin-bottom: 10px;
  align-items: center;
  justify-content: space-around;
  font-family: 'Raleway', sans-serif;
  font-weight: bold;
}

.select {
  display: flex;
  flex-direction: column;
  width: 20em;
}

.select.translateX-0 {
  transform: translateY(230px);
}

.select.translateX-legendsize {
  transform: translateY(230px) translateX(12em);
}

.select.active.translateX-0 {
  transform: translateY(0);
}

.select.active.translateX-legendsize {
  transform: translateY(0) translateX(12em);
}

.select-header p::before {
  content: "\f0ad";
}

.select-body {
  padding: .5em 1em .5em 1em;
  height: 230px;
  overflow: auto;
}

.select-body p {
  font-weight: bold;
}

.select-body ul {
  padding: 0;
}

.select-body li {
  display: inline-flex;
  align-content: center;
}

input[type="checkbox"] {
  margin-right: .25em;
}

